<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgKuningTua"
    tools:context=".CasesGlobalActivity" >

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13"
        android:id="@+id/guideline1" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50"
        android:id="@+id/guideline2" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/philosopher_bold"
        android:gravity="center"
        android:text="@string/status_covid_19_npada_tingkat_global"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/ic_side_ovalbuttom_white"
        android:backgroundTintMode="multiply"
        app:layout_constraintTop_toBottomOf="@+id/guideline1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_stay"
        android:layout_width="370dp"
        android:layout_height="230dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/stay" />

    <com.leo.simplearcloader.SimpleArcLoader
        android:id="@+id/loader"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:visibility="visible"
        app:arc_style="simple_arc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <LinearLayout
        android:id="@+id/error_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_error"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/page" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/philosopher_regular"
            android:text="@string/ada_kendala_di_koneksi_internet"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/philosopher_regular"
            android:gravity="center"
            android:text="@string/coba_check_koneksi_internet_kamu_atau_tekan_tombol_refresh_dibawah"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_button_yellow"
            android:fontFamily="@font/philosopher_bold"
            android:text="@string/refresh"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dataCovidGlobal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottie_stay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/philosopher_bold"
            android:text="@string/data_update_saat_ini"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/kasus_hari_ini"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTodayCasesGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/value"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgGainsBoro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/total_kasus"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvCasesGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/value"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgGainsBoro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/terkonfirmasi_terinfeksi"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvActiveGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/value"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgGainsBoro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/sembuh"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvRecoveredGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/value"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgGainsBoro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/kematian_hari_ini"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTodayDeathsGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/value"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgGainsBoro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/total_kasus_kematian"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTotalDeathsGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/value"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgGainsBoro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/jumlah_negara_yang_terinfeksi"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvAffectedCountriesGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/value"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgGainsBoro" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>