<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgKuningTua"
    tools:context=".DetailCasesCountryActivity" >

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13"
        android:id="@+id/guideline1" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"
        android:id="@+id/guideline2" />

    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/philosopher_bold"
        android:gravity="center"
        android:text="@string/status_covid_19_npada_tingkat_negara"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/ic_side_ovalbuttom_white"
        android:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/lottie_stay"
        android:layout_width="370dp"
        android:layout_height="230dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline1">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="370dp"
            android:layout_height="230dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/country" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/philosopher_bold"
            android:text="@string/data_update_saat_ini"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/nama_negara"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/value"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgGainsBoro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/kasus_hari_ini"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTodayCasesCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/value"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgGainsBoro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/total_kasus"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvCasesCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/value"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgGainsBoro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/terkonfirmasi_terinfeksi"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvActiveCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/value"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgGainsBoro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/sembuh"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvRecoveredCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/value"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgGainsBoro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/kematian_hari_ini"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTodayDeathsCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/value"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgGainsBoro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/total_kasus_kematian"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvDeathsCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/philosopher_regular"
                android:text="@string/value"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgGainsBoro" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>